# RobocarV2

./: .gitignore  README.md  install.sh  package-lock.json  start.sh
backend/: main.py  pyproject.toml
backend/camera/: camera_server.py
backend/controls/: servo.py
backend/sensors/: system_sensors.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.vue
frontend/src/components/: DataFeed.vue  GlobalControl.vue  GlobalView.vue  LocalControl.vue  LocalView.vue  MapView.vue
frontend/src/components/Sensors/: Camera.vue
frontend/src/components/Tabs/: Autopilot.vue  Camera.vue  CameraControl.vue  ManualControl.vue  Overview.vue  SensorGraphs.vue  Settings.vue
frontend/src/layouts/: Footer.vue  NavBar.vue  TabWindow.vue  layout.vue
frontend/src/modules/: configurations.ts
frontend/src/plugins/: index.ts  services.ts  store.ts
frontend/src/services/: api.service.js
frontend/src/services/Workers/: APIDataFeed.ts
frontend/src/utils/: rules.ts
